--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body, html{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 100%;
+    background: linear-gradient(545deg,rgb(252,228,252), rgb(241, 255, 218));
+}
